# schaukasten

./: .env  .gitignore  README.md  main.py  pixi.toml  pyproject.toml  requirements.txt
.github/workflows/: run-script.yaml
.github/workflows_disabled/: run-script.yaml
data/: colors.json
schaukasten/: display.py  events.py  main.py  options.py  parse_ical.py  read.py  terminal.py  types.py
schaukasten/templates/: table.html.jinja
tests/: test_experiments.py
