[tool.poetry]
name = "schaukasten"
version = "0.1.0"
description = "A Queerreferat calendar parsing tool"
authors = ["Felix Broehan <it@queerreferat-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"
reportlab = "^4.0.6"
icalendar = "^5.0.10"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
pydantic = "^2.5.2"
recurring-ical-events = "^2.1.1"
jinja2 = "^3.1.2"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
